@@ -34,9 +34,9 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"     Sccsid: @(#)nail.1	2.271 (gritter) 11/3/04
+.\"     Sccsid: @(#)nail.1	2.272 (gritter) 11/5/04
 .\"
-.TH NAIL 1 "11/3/04" "nail 11.14" "User Commands"
+.TH NAIL 1 "11/5/04" "nail 11.15" "User Commands"
 .SH NAME
 nail \- send and receive Internet mail
 .SH SYNOPSIS
